--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="textCon">
-        <div class="words">LOVE U,郭微</div>
+        <div class="words">我爱你,郭微</div>
 		<div class="heart"></div>
         <div class="days">
             <span class="days-number">1921</span>
