--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <div class="seconds">15 hours 24 minutes 30 seconds</div>
 </div>
 
+<div id="frozen-btn">
+  <button class="green">我们的故事</button>
+  <button class="purple">我们的未来</button>
+</div>
+
+
 
 <script src="js/index.js"></script>
 <script src="js/love.js"></script>
