--- a/showtime/demo.html
+++ b/showtime/demo.html
@@ -230,38 +230,45 @@ let setText = (text) => {
 
 }
 let textList = [
-  '2020年的8月某一天',
+  '准备好了？',
+  '2020年的8月某天',
   '因为天龙',
   '我们初次相识了',
   '2020年12月26日',
   '我开始追求你',
   '平时嘴笨的我',
-  '不知哪来那么多灵感',
+  '也不知哪来的灵感',
   '2021年1月1日',
   '我们的第一个元旦',
-  '虽然相隔千里,却很温暖',
+  '虽然相隔千里’,
+  '却很温暖',
   '你还记得那句话？',
   '我和你跨过分秒',
   '愿也可以跨过余生岁月',
   '2021年1月20日',
   '远在千里之外的你',
-  '陪我过了三十岁后的第一个生日',
+  '陪我过了第一个生日',
   '你送的礼物，我很喜欢',
-  '还记得每周三给你更新的小故事？',
+  '还记得每周三',
+  '为你更新的小故事？',
   '原谅我江郎才尽断了更',
-  '但爱你的故事却会一直持续下去',
+  '但爱你的故事',
+  '会一直持续下去',
   '2021年3月5号',
-  '远在长春的你独自来到上海',
-  '我们一起约定好的城市',
+  '你独自来到上海',
+  '一起约定好的城市',
+  '我们即将见面',
   '2021年3月14日',
   '我们终于见面了',
   '哈哈哈，面基很顺利',
   '我们一起逛遍了苏州',
   '游遍了上海',
-  '还有我一定带你去云南',
-  '但其实，有你的地方才有风景',
-  '2021年5月4日劳动节',
-  '我带你见了我父母',
+  '我一定会带你去云南',
+  '有你的地方才有风景',
+  '2021年4月10日',
+  '我陪你度过第一个生日',
+  '2021年5月4日,
+  '第一次带你见我父母',
   '他们很满意也很喜欢你',
   '我知道我遇对人了',
   '一路走来',
