--- a/showtime/demo.html
+++ b/showtime/demo.html
@@ -240,9 +240,9 @@ let textList = [
   '也不知哪来的灵感',
   '2021年1月1日',
   '我们的第一个元旦',
-  '虽然相隔千里’,
+  '虽然相隔千里',
   '却很温暖',
-  '你还记得那句话？',
+  '你还记得那句话',
   '我和你跨过分秒',
   '愿也可以跨过余生岁月',
   '2021年1月20日',
@@ -267,7 +267,7 @@ let textList = [
   '有你的地方才有风景',
   '2021年4月10日',
   '我陪你度过第一个生日',
-  '2021年5月4日,
+  '2021年5月4日',
   '第一次带你见我父母',
   '他们很满意也很喜欢你',
   '我知道我遇对人了',
