--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <button class="purple" onclick=javascrtpt:jump()>我们的未来</button>
 </div>
 
-<audio controls preload autoplay loop id="lottery">
-     <source src="./video/love.mp3" type="audio/mpeg">
+<audio  preload autoplay loop id="lottery">
+     <source src="http://mp.333ttt.com/mp3music/151082.mp3" type="audio/mpeg">
 </audio>
 
 
