--- a/test.html
+++ b/test.html
@@ -10,8 +10,11 @@
 
 
 <audio controls preload autoplay loop id="lottery">
-     <source src="./video/love.mp3" type="audio/mpeg">
+     <source src="http://mp.333ttt.com/mp3music/51498525.mp3" type="audio/mpeg">
 </audio>
+
+
+
  
  
 <script type="text/javascript">
