--- a/showtime/demo.html
+++ b/showtime/demo.html
@@ -19,6 +19,25 @@ canvas {
 
 <div></div>
 
+<audio  preload autoplay loop id="lottery">
+     <source src="http://mp.333ttt.com/mp3music/51498525.mp3" type="audio/mpeg">
+</audio>
+
+<script type="text/javascript">
+    window.onload = function(){
+             setInterval("toggleSound()",100);
+        }
+ 
+    function toggleSound() {
+                var music = document.getElementById("lottery");//获取ID  
+                    
+                if (music.paused) { //判读是否播放  
+                    music.paused=false;
+                    music.play(); //没有就播放 
+                }    
+        }
+</script>
+
 <script>
 /* Parameters */
 let vertexCount = 10000 * 4
