--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=yes">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>嫁给我吧</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
