--- a/history/index.html
+++ b/history/index.html
@@ -89,7 +89,7 @@ $(document).ready(function(){
 </div>
 
 <audio  preload autoplay loop id="lottery">
-     <source src="http://mp.333ttt.com/mp3music/8131628.mp3" type="audio/mpeg">
+     <source src="./audio/2433536644.mp3" type="audio/mpeg">
 </audio>
 
 </body>
