--- a/showtime/demo.html
+++ b/showtime/demo.html
@@ -20,7 +20,7 @@ canvas {
 <div></div>
 
 <audio  preload autoplay loop id="lottery">
-     <source src="http://mp.333ttt.com/mp3music/51498525.mp3" type="audio/mpeg">
+     <source src="./audio/2433536644.mp3" type="audio/mpeg">
 </audio>
 
 <script type="text/javascript">
@@ -301,327 +301,327 @@ let textList = [
   '能够遇见你',
   '我爱你',
   '郭微',
-  '嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！',
-  '郭微，嫁给我吧！'
+  '嫁给我！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！',
+  '我们结婚吧！'
 ]
 
 let textIndex = 0
