--- a/history/index.html
+++ b/history/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-<title>iPresenter相册3D插件</title>
+<title>爱在进行时</title>
 
 </head>
 <body>
